--- a/layout 1.html
+++ b/layout 1.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>layout 1</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <div>
-        <div class="header">header</div>
+        <div class="header">header </div>
         <div class="sidebar">sidebar</div>
         <div class="section"> this is main section</div>
         <div class="footer">footer</div>
