--- a/Assignments/assignment.html
+++ b/Assignments/assignment.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main">
         <div class="header">
-            <div class="branding">branding</div>
+            <div class="branding">branding</div>sss
             <div class="socialmedia">socialmedia</div>
             <div class="menu">menu</div>
             <div class="container">
