--- a/Assignments/assignment.html
+++ b/Assignments/assignment.html
@@ -11,17 +11,45 @@
 <body>
     <div class="main">
         <div class="header">
-            <div class="branding">branding</div>
-            <div class="socialmedia">socialmedia</div>
-            <div class="menu">menu</div>
+            <div class="branding">
+                <img src="img/logo1.jpg" alt="">
+            </div>
+            <div class="socialmedia">
+                <img src="img/fb.jpg" alt="">
+                <img src="img/insta.jpg" alt="">
+                <img src="img/twitter.png" alt="">
+                <img src="img/whatsapp.jpg" alt="">
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">contact</a></li>
+                    <li><a href="#">services</a></li>
+                 </ul>
+                </div>
             <div class="container">
-                <div class="imagegallery">imagegallery</div>
+                <div class="imagegallery">
+                    <img src="img/wallpaper1.png" alt="will not show Images due to network">
+                    <img src="img/wallpaper2.jpg" alt="will not show Images due to network">
+                    <img src="img/wallpaper3.jpg" alt="will not show Images due to network">
+                </div>
                 <div class="courses">
-                    <div class="bootcamp">bootcamp</div>
-                    <div class="cloud">cloud</div>
-                    <div class="machinelearning">machinelearning</div>
-                    <div class="systemdesign">systemdesign</div>
-                    <div class="footer">footer</div>
+                    <div class="bootcamp">
+                     <img src="img/tshirt2.jpg" alt="">
+                    </div>
+                    <div class="cloud">
+                        <img src="img/perfume3.jpg" alt="">
+                    </div>
+                    <div class="machinelearning">
+                        <img src="img/belt5.jpg" alt="">
+                    </div>
+                    <div class="systemdesign">
+                        <img src="img/bags4.jpg" alt="">
+                    </div>
+                    <div class="footer">
+                        <h3>Copyright reserved@ 2022</h3>
+                    </div>
 
 
 
