--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <h1>Assignment</h1>
         <a href="Assignments/assignment.html">assignment1</a>
+        <a href="Assignments/assignment1.html">assignment2</a>
 
         
     
