--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
         <h1>Assignment</h1>
         <a href="Assignments/assignment.html">assignment1</a>
-        <a href="Assignments/assignment1.html">assignment2</a>
-        <a href="Assignments/gridlayout.html">assignment3</a>
-        <a href="Assignments/gridlayout1.html">assignment4</a>
+        <a href="/Assignments/assignment1.html">assignment2</a>
+        <a href="/Assignments/gridlayout.html">assignment3</a>
+        <a href="/Assignments/gridlayout1.html">assignment4</a>
 
         
     
